src/regression/parse_pool/progtest10.sfp.out

sfc in program: parse_pool/progtest10.sfp
syntax error at 5 at line:
any goto foo when bar
^
