src/regression/parse_pool/progtest10.sfp
# Testing erroneous program definition (missing from keyword)
configuration foo { nothing nothing }
event-condition bar { timer = 8192 }

any goto foo when bar

start foo

